# gst-plugins-good

./: Android.mk
ext/jpeg/: Makefile.am
ext/soup/: Android.mk  gstsouphttpsrc.c
ext/speex/: Makefile.am
gst-libs/gst/: gettext.h
gst/flv/: Android.mk  gstflvdemux.c
gst/id3demux/: Android.mk
gst/qtdemux/: Android.mk  qtdemux.c  quicktime.c
gst/videofilter/: Android.mk
